--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Diman Timer",
+  "name": "Diman-Timer",
   "version": "1.0.0",
   "description": "This will load my app",
   "scripts": {
